<resources>
    <string name="app_name">Lab 7</string>
    <string name="home">Home</string>
    <string name="author">Author</string>
    <string name="drawing">Drawing</string>
    <string name="graphic">Графік</string>
    <string name="diagram">Діаграма</string>
    <string name="movies">Movies</string>
    <string name="author_value">Романова Вікторія\nГрупа ІП-84\nЗК ІП-8418</string>
    <string name="type">Type</string>
    <string name="year">Year</string>
    <string name="title">Title</string>
    <string name="poster">Poster</string>
    <string name="director">Director</string>
    <string name="genre">Genre</string>
    <string name="actors">Actors</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="awards">Awards</string>
    <string name="rating">Rating</string>
    <string name="production">Production</string>
    <string name="plot">Plot</string>
    <string name="rated">Rated</string>
    <string name="released">Released</string>
    <string name="runtime">Runtime</string>
    <string name="noData">No Data! :(</string>
    <string name="search">Search</string>
    <string name="no_film_founded">No film found! :(</string>
    <string name="add">add</string>
    <string name="images">Images</string>
    <string name="keep_typing">Please, keep typing!</string>
</resources>