<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_images"
        app:showAsAction="ifRoom"
        android:title="@string/images"
        android:icon="@drawable/ic_images"/>
    <item
        android:id="@+id/menu_movies"
        app:showAsAction="ifRoom"
        android:title="@string/movies"
        android:icon="@drawable/ic_movies"/>
    <item
        android:id="@+id/menu_drawing"
        app:showAsAction="ifRoom"
        android:title="@string/drawing"
        android:icon="@drawable/ic_drawing"/>
    <item
        android:id="@+id/menu_author"
        app:showAsAction="ifRoom"
        android:title="@string/author"
        android:icon="@drawable/ic_author"/>
</menu>