<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/movie_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/ic_baseline_arrow_back"
        android:padding="15dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="216dp"
                android:layout_height="335dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/poster"
                android:layout_gravity="center"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/title"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/title"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/year"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_year"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/year"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/rated"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_rated"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/rated"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/released"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_released"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/released"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/runtime"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_runtime"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/runtime"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/genre"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_genre"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/genre"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/director"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_director"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/director"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/actors"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_actors"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/actors"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/language"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_language"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/language"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/country"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_country"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/country"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/awards"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_awards"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/awards"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/rating"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_rating"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/rating"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/production"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_production"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/production"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:text="@string/plot"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/movie_plot"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/plot"
                        android:textSize="16sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>